thumbnails and dynamic urls

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,13 @@
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />    
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="M1B Construction - Quality construction services in NYC." />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="M1B Construction" />
+    <meta property="og:description" content="High-quality construction services for residential and commercial projects in NYC." />
+    <meta property="og:image" content="%PUBLIC_URL%/android-chrome-512x512.png" />
+    <meta property="og:url" content="https://your-website-url.com" />
+    <meta property="og:type" content="website" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
